--- a/styles/language-bogl.less
+++ b/styles/language-bogl.less
@@ -1,10 +1,10 @@
 @import 'ui-variables';
 
 atom-text-editor .syntax--source {
-  &.syntax--y {
+  &.syntax--bogl {
 
     .syntax--entity {
-      &.syntax-name {
+      &.syntax--name {
         color: #30a;
       }
     }
