trying stronger css rule

--- a/styles/language-bogl.less
+++ b/styles/language-bogl.less
@@ -1,6 +1,12 @@
 @import 'ui-variables';
 
-atom-text-editor .syntax--source {
+atom-text-editor {
+
+  .syntax--name {
+    color: #30a;
+  }
+
+  /*
   &.syntax--bogl {
 
     .syntax--entity {
@@ -10,4 +16,5 @@ atom-text-editor .syntax--source {
     }
 
   }
+  */
 }
